--- a/HandMade.html
+++ b/HandMade.html
@@ -1,6 +1,6 @@
-1.Candles
-2.Tealights
-3.Rakhis
-4.Choclates
-5.Marriage Decorations
-6.Waste Out Of Best
+Candles,
+Tealights,
+Rakhis,
+Choclates,
+Marriage Decorations,
+Best Out Of Waste
